p5js 3-body digital score test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h2>2024-08-02</h2>
-        <p>TODO: An Interactive Webpage</p>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Sketch</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+  </head>
+
+  <body>
+    <script src="sketch.js"></script>
+    <script src="body.js"></script>
+    <script src="playerhint.js"></script>
+    <script src="creditdisplay.js"></script>
+  </body>
 </html>
