--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <script src="body.js"></script>
     <script src="playerhint.js"></script>
     <script src="creditdisplay.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
