--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 
   <body>
     <script src="sketch.js"></script>
-    <script src="body.js"></script>
-    <script src="playerhint.js"></script>
-    <script src="creditdisplay.js"></script>
-    <script src="timer.js"></script>
+    <script src="curve.js"></script>
   </body>
 </html>
